<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LazerMaze</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pref_laserColor_title">Lazer Color</string>
    <string name="pref_laserColor_summary">Change color of bouncing lazer</string>
    <string name="pref_laserColor_default">random</string>
    <string name="pref_lineColor_title">Maze Color</string>
    <string name="pref_lineColor_summary">Change color of maze lines</string>
    <string name="pref_lineColor_default">white</string>
    <string name="pref_bgColor_title">Background Color</string>
    <string name="pref_bgColor_summary">Change color of background</string>
    <string name="pref_bgColor_default">random</string>
    <string name="pref_sound_title">Sound</string>
    <string name="pref_sound_summary">Toggle bouncing sound</string>
    <string name="pref_vibrate_title">Vibration</string>
    <string name="pref_vibrate_summary">Toggle vibration</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_activity_loading_screen">LoadingScreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="credits">\nThis game was made by Nicholas Hrynuik, with all graphics created by Janet Choi\n</string>
    <string name="loadingText">Loading LazerMaze &#8230;</string>
    <string name="pref_screenOn_title">Screen Backlight</string>
    <string name="pref_screenOn_summary">Keep the screen on</string>
</resources>
